# Agora-Launcher

./: .env.example  .gitignore  AGENTS.md  Agora Desktop Upgrade.md  BACKLOG.md  CODE_OF_ENGAGEMENT.md  Cargo.toml  README.md  browse search response.md  code review.md  direct launch and cli fixes.md
.kilo/: kilo.json
compiler/: README.md  _test_social_metrics.py  compile.py  requirements.txt  test_compile.py  test_compile_integration.py
crash-signatures/: fabric-api-missing.json  mixin-conflict.json  mod-resolution.json  out-of-memory.json
desktop/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/skills/agora-mcp/: SKILL.md
desktop/src-tauri/src/: ai_assistant.rs  auth.rs  commands.rs  crash_diagnostics.rs  crash_investigator.rs  db.rs  dependency_ops.rs  error.rs  governance.rs  install_pipeline.rs  instances.rs  launcher_profiles.rs  lib.rs  loader_manifests.rs  main.rs  mcp.rs  mod_install.rs  models.rs  modrinth_raw.rs  mojang.rs  override_sanitizer.rs  paths.rs  registry.rs  registry_sync.rs  state.rs  version_cache.rs
docs/: desktop-native-smoke-checklist.md
loader-manifests/: known_good_hashes.json  loader_manifests.json
scripts/: check_architecture.py  check_launch_mode.py  check_tauri_bindings.py  deploy_release_assets.py  fetch_loader_manifests.py  fetch_registry_db.py  refresh_loader_manifests.py  test_scripts.py  verify_db.py  (+1 more)
(+233 files in other folders)
